--- a/View/gestionUtilisateur.html
+++ b/View/gestionUtilisateur.html
@@ -5,10 +5,7 @@
     <meta charset="utf-8">
     <title>Gestion utilisateur</title>
     <link rel="stylesheet" href="styleGestionUtil.css">
-   <script
-  src="http://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-2.2.4.min.js"integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="crossorigin="anonymous"></script>
 </head>
 
 <body>  
@@ -19,12 +16,15 @@
     <table class="table-fill">
         <thead>
             <tr>
-                <th class="text-left">Pseudo</th>
-                <th class="text-left">Nom</th>
-                <th class="text-left">Prenom</th>
-                <th class="text-left">mdp</th>
-                <th class="text-left">last_maj</th>
-                <th class="text-left">detail</th>
+                <th>id</th>
+                <th>Mail</th>
+                <th>status</th>
+                <th>address</th>
+                <th>type_cb</th>
+                <th>num_cb</th>
+                <th>postal code</th>
+                <th>detail</th>
+                
             </tr>
         </thead>
         <tbody id="bodyDetail" class="table-hover">
@@ -43,11 +43,9 @@ $(document).ready(function () {
                     console.log(data);
                    var dataJson = JSON.parse(data);
                    $(dataJson).each(function(index, element){
-                
-                        $("#bodyDetail").append('<tr><td class="text-left">'+element['mail']+'</td><td class="text-left">'+element['nom']+'</td><td class="text-left">'+element['prenom']+'</td><td class="text-left">'+element['mdp']+'</td><td class="text-left">'+element['last_maj']+'</td><td class="text-left"><a href="detailUtilisateur.php?id='+element['id']+'">Detail</a></td></tr>');
+                       console.log(element['address']);
+                        $("#bodyDetail").append('<tr><td class="text-left">'+element['id']+'</td><td class="text-left">'+element['mail']+'</td><td class="text-left">'+element['status']+'</td><td class="text-left">'+element['address']+'</td><td class="text-left">'+element['type_cb']+'</td><td class="text-left">'+element['num_cb']+'</td><td class="text-left">'+element['postal_code']+'</td><td class="text-left"><a href="detailUtilisateur.php?id='+element['id']+'">Detail</a></td></tr>');
                    });
-
-
                 },
                 error: function (resultat, statut, erreur) {
                     console.log(resultat);
