--- a/View/gestionUtilisateur.html
+++ b/View/gestionUtilisateur.html
@@ -47,7 +47,7 @@
                     });
                 },
                 error: function (resultat, statut, erreur) {
-                    console.log('erreur');
+                    console.log('erreur', erreur);
                 }
             });
         });
