--- a/View/creerUtilisateur.html
+++ b/View/creerUtilisateur.html
@@ -28,17 +28,21 @@
     <script src="http://code.jquery.com/jquery-2.2.4.min.js"integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="crossorigin="anonymous"></script>
     <script>
         function createUser() {
-            $.ajax({
-                url: "/puppyCo/Model/rest.php?/user/create/"+ $('#login-mail').val() + "/" + $('#login-pass').val(),
-                type: "POST",
-                success: function (data) {
-                    alert('utilisateur créer !');
-                    window.location.href = "gestionUtilisateur.html";
-                },
-                error: function (resultat, statut, erreur) {
-                    console.log('erreur');
-                }
-            });
+            if ($('#login-mail').val() === '' || $('#login-pass').val() === '') {
+                alert('Les champs doivent êtres remplis');
+            } else {
+                $.ajax({
+                    url: "/puppyCo/Model/rest.php?/user/create/"+ $('#login-mail').val() + "/" + $('#login-pass').val(),
+                    type: "POST",
+                    success: function (data) {
+                        alert('utilisateur créer !');
+                        window.location.href = "gestionUtilisateur.html";
+                    },
+                    error: function (resultat, statut, erreur) {
+                        console.log('erreur');
+                    }
+                });
+            }
         }
     </script>
 </body>
