--- a/View/gestionUtilisateur.html
+++ b/View/gestionUtilisateur.html
@@ -13,7 +13,7 @@
     <div class="table-title">
         <h3>Gestion utilisateur</h3>
     </div>
-    <button type="button" class="btn btn-primary btn-large btn-block"><a href="creerUtilisateur.html">Ajouter un utilisateur!</a></button>
+    <button type="button" class="btn btn-primary btn-large btn-block" onclick="window.open('creerUtilisateur.html');">Ajouter un utilisateur</button>
     <table class="table-fill">
         <thead>
             <tr>
@@ -43,6 +43,7 @@
                 success: function (data) {
                     var dataJson = JSON.parse(data);
                     $(dataJson).each(function (index, element) {
+                        console.log(element['id']);
                         $("#bodyDetail").append('<tr><td class="text-left">' + element['id'] + '</td><td class="text-left">' + element['mail'] + '</td><td class="text-left">' + element['status'] + '</td><td class="text-left">' + element['address'] + '</td><td class="text-left">' + element['type_cb'] + '</td><td class="text-left">' + element['num_cb'] + '</td><td class="text-left">' + element['postal_code'] + '</td><td class="text-left"><a href="detailUtilisateur.php?id=' + element['id'] + '">Detail</a></td></tr>');
                     });
                 },
