--- a/View/style.css
+++ b/View/style.css
@@ -22,7 +22,7 @@ li a:hover {
 }
 body {
     font-family: Arial;
-    background-color: #3498DB;
+    background-color: #0B736E;
 }
 .card{
     background-color: #FFF;
