Suppression des class CSS inexistantes

--- a/View/accueil.html
+++ b/View/accueil.html
@@ -20,7 +20,7 @@
                     <a href="#about">About</a>
                 </div>
             </div>
-            <a style="cursor:pointer; position: fixed; right: 0;padding: 10px 14px 0 0; color: white;" onclick="openNav()">&#9776; Connexion</a>
+            <a class="btnConnexion" onclick="openNav()">&#9776; Connexion</a>
             </ul>
         </nav>
         <div class="categorie">
