--- a/View/detailUtilisateur.html
+++ b/View/detailUtilisateur.html
@@ -4,49 +4,49 @@
 <head>
     <meta charset="utf-8">
     <title>Detail utilisateur</title>
-    <link rel="stylesheet" href="styleDetailUtil.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="login">
         <div class="login-form">
             <div class="login-screen">
-                <div class="control-group">
-                    <input type="text" class="login-field" placeholder="mail" id="login-mail">
-                    <label class="login-field-icon fui-user" for="login-mail">Mail</label>
+                <div>
+                    <input type="text" placeholder="mail" id="login-mail">
+                    <label for="login-mail">Mail</label>
                 </div>
 
-                <div class="control-group">
-                    <input type="text" class="login-field" placeholder="status" id="login-status">
-                    <label class="login-field-icon fui-lock" for="login-status">status</label>
+                <div>
+                    <input type="text" placeholder="status" id="login-status">
+                    <label for="login-status">status</label>
                 </div>
-                <div class="control-group">
-                    <input type="text" class="login-field" placeholder="address" id="login-address">
-                    <label class="login-field-icon fui-lock" for="login-address">address</label>
+                <div>
+                    <input type="text" placeholder="address" id="login-address">
+                    <label for="login-address">address</label>
                 </div>
-                <div class="control-group">
-                    <input type="text" class="login-field" placeholder="type_cb" id="login-typecb">
-                    <label class="login-field-icon fui-lock" for="login-typecb">type_cb</label>
+                <div>
+                    <input type="text" placeholder="type_cb" id="login-typecb">
+                    <label for="login-typecb">type_cb</label>
                 </div>
-                <div class="control-group">
-                    <input type="text" class="login-field" placeholder="num-cb" id="login-numcb">
-                    <label class="login-field-icon fui-lock" for="login-numcb">num_cb</label>
+                <div>
+                    <input type="text" placeholder="num-cb" id="login-numcb">
+                    <label for="login-numcb">num_cb</label>
                 </div>
-                <div class="control-group">
-                    <input type="text" class="login-field" placeholder="crypto" id="login-crypto">
-                    <label class="login-field-icon fui-lock" for="login-crypto">crypto</label>
+                <div>
+                    <input type="text" placeholder="crypto" id="login-crypto">
+                    <label for="login-crypto">crypto</label>
                 </div>
-                <div class="control-group">
-                    <input type="text" class="login-field" placeholder="city" id="login-city">
-                    <label class="login-field-icon fui-lock" for="login-city">city</label>
-                <div class="control-group">
-                    <input type="text" class="login-field" placeholder="postal code" id="login-postalcode">
-                    <label class="login-field-icon fui-lock" for="login-postalcode">code postal</label>
+                <div>
+                    <input type="text" placeholder="city" id="login-city">
+                    <label for="login-city">city</label>
+                <div>
+                    <input type="text" placeholder="postal code" id="login-postalcode">
+                    <label for="login-postalcode">code postal</label>
                 </div>
                 </div>
-                <input type="" class="btn btn-primary btn-large btn-block" value="Annuler" onclick='window.location.href = "gestionUtilisateur.html"' />
-                <input type="submit" class="btn btn-primary btn-large btn-block" value="supprimer" onclick="deleteUser()" />
-                <input type="submit" class="btn btn-primary btn-large btn-block" value="Valider les changements" onclick="updateUser()" />
+                <input type="" class="btn" value="Annuler" onclick='window.location.href = "gestionUtilisateur.html"' />
+                <input type="submit" class="btn" value="supprimer" onclick="deleteUser()" />
+                <input type="submit" class="btn" value="Valider les changements" onclick="updateUser()" />
             </div>
         </div>
     </div>
