--- a/View/gestionProduits.html
+++ b/View/gestionProduits.html
@@ -3,27 +3,23 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Gestion utilisateur</title>
+    <title>Gestion Produits</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="table-title">
-        <h3>Gestion utilisateur</h3>
+        <h3>Gestion Produits</h3>
     </div>
     <button type="button" class="btn" onclick="window.open('creerUtilisateur.html');">Ajouter un utilisateur</button>
     <table class="table-fill">
         <thead>
             <tr>
-                <th>id</th>
-                <th>Mail</th>
-                <th>status</th>
-                <th>address</th>
-                <th>type_cb</th>
-                <th>num_cb</th>
-                <th>postal code</th>
-                <th>detail</th>
-
+                <th>Reference</th>
+                <th>Categorie</th>
+                <th>Title</th>
+                <th>Price</th>
+                <th>Description</th>
             </tr>
         </thead>
         <tbody id="bodyDetail">
