--- a/View/style.css
+++ b/View/style.css
@@ -66,9 +66,6 @@ color: #777;
 .login-form {
 text-align: center;
 }
-.control-group {
-margin-bottom: 10px;
-}
 
 input {
 text-align: center;
@@ -207,3 +204,224 @@ box-shadow: none;
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
+
+
+
+
+
+#produit {
+    border: 1px solid black;
+    width: 800px;
+    height: 300px;
+    margin: auto;
+    margin-top: 150px;
+}
+
+#produit .prodDescrImg {
+    height: 300px;
+    width: 800px;
+    border: 1px solid white;
+    display: flex;
+}
+
+#produit .prodImage {
+    height: 300px;
+    width: 300px;
+}
+
+#produit .prodImage img{
+    height: auto;
+    width: 298px;
+}
+
+
+
+#produit .prodDetails {
+    height: 300px;
+    width: 495px;
+    float: left;
+    padding: 20px;
+}
+
+
+.prodDetails h3 {
+    margin: auto;
+    float: top;
+    text-align: center;
+}
+
+
+.prodDetails .description {
+    margin: auto;
+    margin-top: 25px;
+    max-width: 98%;
+    height: 180px;
+    text-overflow: ellipsis;
+    display: block;
+}
+
+.prodDetails .prix {
+    margin-top: 10px;
+    width: 50%;
+}
+
+
+
+.btnAjouter {
+    cursor:pointer;
+    width: 50px;
+    height: 20px;
+    float: right;
+    color: white;
+    text-decoration: none;
+}
+
+
+
+
+.btnConnexion {
+    cursor:pointer;
+    position: fixed;
+    right: 0;
+    padding: 10px 14px 0 0;
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.login {
+    margin: 20px auto;
+    width: 223px;
+    }
+    .login-screen {
+    background-color: #FFF;
+    padding: 20px;
+    border-radius: 5px
+    }
+    .login-form {
+    text-align: center;
+    }
+    body {
+        font-family: Arial;
+        background-color: #3498DB;
+    }
+    input {
+    text-align: center;
+    background-color: #ECF0F1;
+    border: 2px solid transparent;
+    border-radius: 3px;
+    font-size: 16px;
+    font-weight: 200;
+    padding: 10px 0;
+    width: 180px;
+    transition: border .5s;
+    }
+    
+    input:focus {
+    border: 2px solid #3498DB;
+    box-shadow: none;
+    }
+
+
+
+
+
+
+
+
+    body {
+        background-color: #0B736E;
+        font-family: Arial;
+        font-size: 16px;
+        font-weight: 400;
+        text-rendering: optimizeLegibility;
+      }
+      
+      div.table-title {
+         display: block;
+        margin: auto;
+        max-width: 600px;
+        padding:5px;
+        width: 100%;
+      }
+      
+      .table-title h3 {
+         color: #fafafa;
+         font-size: 30px;
+         font-weight: 400;
+         font-style:normal;
+         font-family: "Roboto", helvetica, arial, sans-serif;
+         text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+         text-transform:uppercase;
+      }
+      
+      
+      /*** Table Styles **/
+      
+      .table-fill {
+        background: white;
+        border-radius:3px;
+        border-collapse: collapse;
+        height: 320px;
+        margin: auto;
+        max-width: 600px;
+        padding:5px;
+        width: 100%;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+        animation: float 5s infinite;
+      }
+       
+      th {
+        color:#D5DDE5;;
+        background:#1b1e24;
+        border-bottom:4px solid #9ea7af;
+        border-right: 1px solid #343a45;
+        font-size:23px;
+        font-weight: 100;
+        padding:24px;
+        text-align:left;
+        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+        vertical-align:middle;
+      }
+      
+
+
+      tr {
+        border-top: 1px solid #C1C3D1;
+        border-bottom-: 1px solid #C1C3D1;
+        color:#666B85;
+        font-size:16px;
+        font-weight:normal;
+        text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+      }
+       
+      tr:hover td {
+        background:#4E5066;
+        color:#FFFFFF;
+        border-top: 1px solid #22262e;
+        border-bottom: 1px solid #22262e;
+      }
+       
+
+      td {
+        background:#FFFFFF;
+        padding:20px;
+        text-align:left;
+        vertical-align:middle;
+        font-weight:300;
+        font-size:18px;
+        text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+        border-right: 1px solid #C1C3D1;
+      }
