format code + fix btn style

--- a/View/gestionUtilisateur.html
+++ b/View/gestionUtilisateur.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="table-title">
+    <div class="table-title" style="text-align: center">
         <h3>Gestion utilisateur</h3>
     </div>
     <button type="button" class="btn" onclick="window.open('creerUtilisateur.html');">Ajouter un utilisateur</button>
