--- a/View/style.css
+++ b/View/style.css
@@ -20,98 +20,102 @@ li a {
 li a:hover {
     background-color: #111;
 }
+
 body {
     font-family: Arial;
     background-color: #0B736E;
 }
-.card{
+
+.card {
     background-color: #FFF;
     padding: 20px;
     border-radius: 5px
 }
-.container-card{
+
+.container-card {
     margin: 20px auto;
     width: 302px;
     display: inline-flex;
 }
-.categorie{
+
+.categorie {
     padding: 0 0 0 48px;
     text-align: center;
 }
 
-
-
 * {
-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 *:focus {
-	outline: none;
+    outline: none;
 }
+
 .login {
-margin: 20px auto;
-width: 223px;
+    margin: 20px auto;
+    width: 223px;
 }
+
 .login-screen {
-background-color: #FFF;
-padding: 20px;
-border-radius: 5px
+    background-color: #FFF;
+    padding: 20px;
+    border-radius: 5px
 }
 
 .app-title {
-text-align: center;
-color: #777;
+    text-align: center;
+    color: #777;
 }
 
 .login-form {
-text-align: center;
+    text-align: center;
 }
 
 input {
-text-align: center;
-background-color: #ECF0F1;
-border: 2px solid transparent;
-border-radius: 3px;
-font-size: 16px;
-font-weight: 200;
-padding: 10px 0;
-width: 180px;
-transition: border .5s;
+    text-align: center;
+    background-color: #ECF0F1;
+    border: 2px solid transparent;
+    border-radius: 3px;
+    font-size: 16px;
+    font-weight: 200;
+    padding: 10px 0;
+    width: 180px;
+    transition: border .5s;
 }
 
 input:focus {
-border: 2px solid #3498DB;
-box-shadow: none;
+    border: 2px solid #3498DB;
+    box-shadow: none;
 }
 
 .btn {
-  border: 2px solid transparent;
-  background: #3498DB;
-  color: #ffffff;
-  font-size: 16px;
-  line-height: 25px;
-  padding: 10px 0;
-  text-decoration: none;
-  text-shadow: none;
-  border-radius: 3px;
-  box-shadow: none;
-  transition: 0.25s;
-  display: block;
-  width: 180px;
-  margin: 0 auto;
+    border: 2px solid transparent;
+    background: #3498DB;
+    color: #ffffff;
+    font-size: 16px;
+    line-height: 25px;
+    padding: 10px 0;
+    text-decoration: none;
+    text-shadow: none;
+    border-radius: 3px;
+    box-shadow: none;
+    transition: 0.25s;
+    display: block;
+    width: 180px;
+    margin: 5px auto;
+    cursor: pointer;
 }
 
 .btn:hover {
-  background-color: #2980B9;
+    background-color: #2980B9;
 }
 
 .login-link {
-  font-size: 12px;
-  color: #444;
-  display: block;
-  margin-top: 12px;
+    font-size: 12px;
+    color: #444;
+    display: block;
+    margin-top: 12px;
 }
-
 
 .tableau {
     margin: auto;
@@ -119,12 +123,10 @@ box-shadow: none;
     border: 1px solid black;
 }
 
-.tableau tr, td, th{
+.tableau tr, td, th {
     text-align: center;
     border: 1px solid #B72D57;
 }
-
-
 
 .sidenav {
     height: 100%;
@@ -148,7 +150,7 @@ box-shadow: none;
     transition: 0.3s;
 }
 
-.sidenav a:hover, .offcanvas a:focus{
+.sidenav a:hover, .offcanvas a:focus {
     color: #f1f1f1;
 }
 
@@ -161,8 +163,13 @@ box-shadow: none;
 }
 
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+    .sidenav {
+        padding-top: 15px;
+    }
+
+    .sidenav a {
+        font-size: 18px;
+    }
 }
 
 .dropbtn {
@@ -184,7 +191,7 @@ box-shadow: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -195,7 +202,9 @@ box-shadow: none;
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+    background-color: #f1f1f1
+}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -204,10 +213,6 @@ box-shadow: none;
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
-
-
-
-
 
 #produit {
     border: 1px solid black;
@@ -229,12 +234,10 @@ box-shadow: none;
     width: 300px;
 }
 
-#produit .prodImage img{
+#produit .prodImage img {
     height: auto;
     width: 298px;
 }
-
-
 
 #produit .prodDetails {
     height: 300px;
@@ -243,13 +246,11 @@ box-shadow: none;
     padding: 20px;
 }
 
-
 .prodDetails h3 {
     margin: auto;
     float: top;
     text-align: center;
 }
-
 
 .prodDetails .description {
     margin: auto;
@@ -265,10 +266,8 @@ box-shadow: none;
     width: 50%;
 }
 
-
-
 .btnAjouter {
-    cursor:pointer;
+    cursor: pointer;
     width: 50px;
     height: 20px;
     float: right;
@@ -276,48 +275,35 @@ box-shadow: none;
     text-decoration: none;
 }
 
-
-
-
 .btnConnexion {
-    cursor:pointer;
+    cursor: pointer;
     position: fixed;
     right: 0;
     padding: 10px 14px 0 0;
     color: white;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .login {
     margin: 20px auto;
     width: 223px;
-    }
-    .login-screen {
+}
+
+.login-screen {
     background-color: #FFF;
     padding: 20px;
     border-radius: 5px
-    }
-    .login-form {
+}
+
+.login-form {
     text-align: center;
-    }
-    body {
-        font-family: Arial;
-        background-color: #3498DB;
-    }
-    input {
+}
+
+body {
+    font-family: Arial;
+    background-color: #3498DB;
+}
+
+input {
     text-align: center;
     background-color: #ECF0F1;
     border: 2px solid transparent;
@@ -327,101 +313,90 @@ box-shadow: none;
     padding: 10px 0;
     width: 180px;
     transition: border .5s;
-    }
-    
-    input:focus {
+}
+
+input:focus {
     border: 2px solid #3498DB;
     box-shadow: none;
-    }
+}
 
+body {
+    background-color: #0B736E;
+    font-family: Arial;
+    font-size: 16px;
+    font-weight: 400;
+    text-rendering: optimizeLegibility;
+}
 
+div.table-title {
+    display: block;
+    margin: auto;
+    max-width: 600px;
+    padding: 5px;
+    width: 100%;
+}
 
+.table-title h3 {
+    color: #fafafa;
+    font-size: 30px;
+    font-weight: 400;
+    font-style: normal;
+    font-family: "Roboto", helvetica, arial, sans-serif;
+    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+    text-transform: uppercase;
+}
 
+/*** Table Styles **/
 
+.table-fill {
+    background: white;
+    border-radius: 3px;
+    border-collapse: collapse;
+    height: 320px;
+    margin: auto;
+    max-width: 600px;
+    padding: 5px;
+    width: 100%;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    animation: float 5s infinite;
+}
 
+th {
+    color: #D5DDE5;;
+    background: #1b1e24;
+    border-bottom: 4px solid #9ea7af;
+    border-right: 1px solid #343a45;
+    font-size: 23px;
+    font-weight: 100;
+    padding: 24px;
+    text-align: left;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    vertical-align: middle;
+}
 
+tr {
+    border-top: 1px solid #C1C3D1;
+    border-bottom-: 1px solid #C1C3D1;
+    color: #666B85;
+    font-size: 16px;
+    font-weight: normal;
+    text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+}
 
-    body {
-        background-color: #0B736E;
-        font-family: Arial;
-        font-size: 16px;
-        font-weight: 400;
-        text-rendering: optimizeLegibility;
-      }
-      
-      div.table-title {
-         display: block;
-        margin: auto;
-        max-width: 600px;
-        padding:5px;
-        width: 100%;
-      }
-      
-      .table-title h3 {
-         color: #fafafa;
-         font-size: 30px;
-         font-weight: 400;
-         font-style:normal;
-         font-family: "Roboto", helvetica, arial, sans-serif;
-         text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-         text-transform:uppercase;
-      }
-      
-      
-      /*** Table Styles **/
-      
-      .table-fill {
-        background: white;
-        border-radius:3px;
-        border-collapse: collapse;
-        height: 320px;
-        margin: auto;
-        max-width: 600px;
-        padding:5px;
-        width: 100%;
-        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-        animation: float 5s infinite;
-      }
-       
-      th {
-        color:#D5DDE5;;
-        background:#1b1e24;
-        border-bottom:4px solid #9ea7af;
-        border-right: 1px solid #343a45;
-        font-size:23px;
-        font-weight: 100;
-        padding:24px;
-        text-align:left;
-        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-        vertical-align:middle;
-      }
-      
+tr:hover td {
+    background: #4E5066;
+    color: #FFFFFF;
+    border-top: 1px solid #22262e;
+    border-bottom: 1px solid #22262e;
+}
 
-
-      tr {
-        border-top: 1px solid #C1C3D1;
-        border-bottom-: 1px solid #C1C3D1;
-        color:#666B85;
-        font-size:16px;
-        font-weight:normal;
-        text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
-      }
-       
-      tr:hover td {
-        background:#4E5066;
-        color:#FFFFFF;
-        border-top: 1px solid #22262e;
-        border-bottom: 1px solid #22262e;
-      }
-       
-
-      td {
-        background:#FFFFFF;
-        padding:20px;
-        text-align:left;
-        vertical-align:middle;
-        font-weight:300;
-        font-size:18px;
-        text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-        border-right: 1px solid #C1C3D1;
-      }
+td {
+    background: #FFFFFF;
+    padding: 20px;
+    text-align: left;
+    vertical-align: middle;
+    font-weight: 300;
+    font-size: 18px;
+    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+    border-right: 1px solid #C1C3D1;
+}
